--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,17 +8,11 @@ jobs:
 build:
 
 
-runs-on: ubuntu-latest
-steps:
+    runs-on: ubuntu-latest
+    steps:
 
-name: Build the docker-compose stack
-run: docker-compose up -d
+    - name: Build the docker-compose stack
+      run: docker-compose up -d
 
-
-name: Sleep
-uses: jakejarvis/wait-action@master
-with:
-time: '60s'
-
-name: Check running containers
-run: docker ps
+    - name: Check running containers
+      run: docker ps
