--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,12 @@
-name: Docker Image CI
-on: [push]
-
-
+name: Docker Compose Actions Workflow
+on: push
 jobs:
-
-
-build:
-
-
+  test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Build the stack
+        run: docker-compose up -d
 
-    - name: Build the docker-compose stack
-      run: docker-compose up -d
-
-    - name: Check running containers
-      run: docker ps
+      - name: Check running containers
+        run: docker ps
