--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,5 +8,10 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
 
+      - name: Sleep
+      - uses: jakejarvis/wait-action@master
+        with:
+          time: '60s'
+
       - name: Check running containers
         run: docker ps
