--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Build the stack
         run: docker-compose up -d
 
-      - name: Sleep
-      - uses: jakejarvis/wait-action@master
+      - name: Sleep for 60 seconds
+        uses: jakejarvis/wait-action@master
         with:
           time: '60s'
 
