--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,7 @@ services:
   analytics:
     build:
       context: analytics
-    volumes:                    #####----------------------------
-      - ./dags:/app_dag     #####----------------------------
+
     environment:
       POSTGRESQL_CS: 'postgresql+psycopg2://postgres:password@psql_db:5432/main'
       MYSQL_CS: 'mysql+pymysql://nonroot:nonroot@mysql_db/analytics?charset=utf8'
@@ -43,18 +42,4 @@ services:
       - mysql_db
       - psql_db
       - main
-    #command: ["python", "./analytics.py" ]
-    #tty: true           # <-- This option    #####----------------------------
-    command: tail -f /dev/null   #####----------------------------
-# docker-compose build analytics
-
-# docker run -d data_engineer_task_analytics tail -f /dev/null
-# docker run -it data_engineer_task_analytics bash
-# docker exec -i -t 4d1c7e1b7e10 bash
-# docker ps -a
-
-# docker run -it image_name sh
-# docker stop id
-
-# docker-compose build analytics
-# docker-compose up analytics
+    command: ["python", "./analytics.py" ]
