remove sleep 60sec

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,4 +9,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Check running containers
-        run: docker ps
+        run: docker ps -a
